tests/fixtures/valid/spec_inheritance.etcm
spec CosineLRScheduler <- schedulers/base.etcm:
  min_lr_ratio: float = Field(default=0.0, ge=0.0, le=1.0)
  cycles: float = Field(default=0.5, gt=0.0)

impl default:
  min_lr_ratio: 0.01
  cycles: 0.5
