tests/fixtures/invalid/spec_cycle/a.etcm
spec A <- b.etcm:
  value: int = Field(default=1)
